Ticket 94 (#95)
* logic to auto sync cal with appointments, added column to DB to track synced state on appointments

* fixed repository type error

* fixed google config based on auth error

* fixed google config based on auth error